BlackMATE-stop treeviews from jumping
Separators in treeviews require a minumum height or they will appear only when hovered, causing the rest of the treeview to jump. Same thing I found in my own theme, same fix.

--- a/desktop-themes/BlackMATE/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/BlackMATE/gtk-3.0/gtk-widgets.css
@@ -997,6 +997,11 @@ treeview .view {
 	color: @theme_fg_color;
 }
 
+/*force separators to appear, stop jumping */
+treeview.view.separator {
+    min-height: 2px; 
+}
+
 /* row as a separator */
 treeview.view.separator,
 treeview.view.separator:hover {
